fix height collapse issue

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 html, body {
    width : 100%;
-   height: 100%;
+   min-height: 100%;
 }
 
 body,
@@ -399,7 +399,7 @@ footer {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  
+
   header .container,
   .slider .container,
   .wwd {
